[metadata]
name = klugman
version = 0.1
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = StackTach.v3 Client 
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
home-page = https://github.com/StackTach/klugman
keywords =
    stacktach
    rest
    api
    client
    klugman
    quincy
    openstack
[files]
packages =
    klugman
[entry_points]
console_scripts =
    klugman = klugman.klugman:main
